--- a/study way/2-1-icon.html
+++ b/study way/2-1-icon.html
@@ -8,14 +8,17 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/normalize.css">
     <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src=""></script>
+    
 </head>
 <body>
             <div id="nav2">
                     <button class="btn btn-primary">导航菜单B</button>
-                 
-                 <button class="btn btn-success btn-lg"> 
+                 <button class="btn btn-success btn-lg">
+                     <!--
+                        btn-lg:按钮，large:(lg) adj.大的，众多的。n.大   
+                  -->
                      <span class="glyphicon glyphicon-apple"> </span>
                      导航菜单B
                  </button>
